[project]
name = "tiangolo-com"
version = "0.1.0"
description = "tiangolo's boring personal website"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "github-actions" },
    "pre-commit>=2.17.0,<5.0.0",
]
docs = [
    "cairosvg==2.8.2",
    "griffe-typingdoc==0.3.0",
    "griffe-warnings-deprecated==1.1.0",
    "mdx-include>=1.4.1,<2.0.0",
    "mkdocs-macros-plugin==1.4.1",
    "mkdocs-material==9.7.0",
    "mkdocs-redirects>=1.2.1,<1.3.0",
    "mkdocstrings[python]==0.30.1",
    "pillow==12.0.0",
    "pyyaml>=5.3.1,<7.0.0",
    "typer==0.24.1",
]
github-actions = [
    "httpx>=0.27.0,<0.29.0",
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "pygithub>=2.3.0,<3.0.0",
]
