[project]
name = "tiangolo-com"
version = "0.1.0"
description = "tiangolo's boring personal website"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "github-actions" },
    "pre-commit>=4.6.0,<5.0.0",
    "prek>=0.4.3",
]
docs = [
    "cairosvg==2.9.0",
    "griffe-typingdoc==0.3.1",
    "griffe-warnings-deprecated==1.1.1",
    "mdx-include>=1.4.1,<2.0.0",
    "mkdocstrings[python]>=1.0.4",
    "pillow==12.2.0",
    "pyyaml>=5.3.1,<7.0.0",
    "typer==0.26.1",
    "zensical>=0.0.43",
]
github-actions = [
    "httpx>=0.27.0,<0.29.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "pygithub>=2.9.1,<3.0.0",
]
